feat: Nord theme colors + suppress JLine native-access warning
- Switch all chrome colors to Nord palette (Polar Night bg, Snow Storm
  text, Frost accents, Aurora warnings/success/paint)
- Switch ink colors to Nord Aurora + Frost shades
- Update contrast helper for Nord light/dark backgrounds
- Add --enable-native-access=ALL-UNNAMED to suppress JLine warning